--- a/day-2-grid/10-mondrian-you-try-it/begin/youtryit.css
+++ b/day-2-grid/10-mondrian-you-try-it/begin/youtryit.css
@@ -2,43 +2,64 @@
 .wrapper {
   width: 633px;
   height: 458px;
-  background: url(mondrian2.png) no-repeat;
- 
+  /* background: url(mondrian2.png) no-repeat; */
+  background-color: black;
+  display: grid;
+  grid-row-gap: 8px;
+  grid-column-gap: 8px;
+  grid-template-rows: 70px 15px 55px 52px 82px 146px;
+  grid-template-columns: 300px 90px 150px 70px;
 }
 div {
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	background-color: white;
-	opacity: 0.5;
+	/* opacity: 0.5; */
 }
 .a {
-
+  grid-column: 1/2;
+  grid-row: 1/6;
+  background-color: red;
 }
 .b {
-
+  grid-column: 2/3;
+  grid-row: 1/3;
+  background-color: yellow;
 }
 .c {
-
+  grid-column: 3/4;
+  grid-row: 1/4;
 }
 .d {
-
+  grid-column: 4/5;
+  grid-row: 1/2;
+  background-color: red;
 }
 .e {
-
+  grid-column: 2/3;
+  grid-row: 3/6;
 }
 .f {
-
+  grid-column: 3/4;
+  grid-row: 4/5;
+  background-color:blue;
 }
 .g {
-	
+  grid-column: 4/5;
+  grid-row: 2/5;
 }
 .h {
-	
+  grid-column: 1/2;
+  grid-row: 6/7;
 }
 .i {
-	
+  grid-column: 2/3;
+  grid-row: 6/7;
+  background-color: blue;
 }
 .j {
-	
+  grid-column: 3/5;
+  grid-row:5/7;
+  background-color:yellow;
 }
 
 
